# santas-little-digger

./: .gitignore  Cargo.toml
assets/: digger.aseprite  ground.tile.ron  metal.aseprite  tilemap.aseprite  tiles.info.ron  wood.aseprite
src/: main.rs  map.rs  player.rs
