[package]
name = "santas-little-digger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12.1", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.21.0"
bevy_common_assets = { version = "0.8.0", features = ["ron"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", features = ["atlas"] }
bevy_pixel_camera = "0.12.1"
serde = "1.0.193"
 
